# SciCore-Mol

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  sft_tester.py  train_sft.py
configs/: env.example.sh  qwen3_sft_epoch2_1.yaml  qwen3_sft_epoch2_2.yaml  qwen3_sft_epoch2_3.yaml  qwen3_sft_epoch2_3_layer2_temp.yaml
eval/: eval_bbbp_classification.py  eval_qm9_multitask.py  eval_smolinstruct.py  eval_smolinstruct_batch.py  extract_prediction.py
eval/drug_optim/: README.md  eval_admet.py  eval_diffusion.py
eval/drug_optim/config/: diffusion_base.yaml  llm_base.yaml  llm_cpt_sft.yaml
eval/drug_optim/scoring/: __init__.py  admet_reasoning_richness.py  filter.py  scorer.py
hf-space/: Dockerfile  README.md  app.py  requirements.txt
modules/: data_loader.py  gnn.py  mlp.py  model_init.py  mol_aware_lm.py  ner_online_name.py  tools.py
modules/layer2_component/: Layer2Inferer.py  Layer2Trainer.py  __init__.py  amount_utils.py  collate.py  dataset.py  gvp_embedder.py  io_utils.py  layer2_config.yaml  masking.py  model.py  smiles_utils.py
modules/ldmol_component/: LDMolInferer.py  LDMolTrainer.py  README.md  __main__.py  ldmol-config.yaml  ldmol-drug_optim-config.yaml  multimodal_molecule_editor.md  test_inferer.sh  test_trainer.sh  utils.py
modules/ldmol_component/DiT/: models.py
modules/ldmol_component/assets/: ldmol-drug_optim-sft.yaml  ldmol-drug_optim.yaml  ldmol-train.yaml
scripts/: README.md  rerun_scoring.sh
scripts/ckpt/: convert_model_to_safetensors.py  split_llm_extras.py  split_model.py
scripts/dev/: debug_sft_tester.py
scripts/eval/: eval_chembench4k_gpt4o.py  eval_chembench4k_interns1mini_alltasks_logprob.py  eval_layer2_chembench.py  eval_layer2_testset.py  eval_smol_instruct_gpt4o.py  eval_smol_instruct_interns1mini.py  run_eval_moleculenet_sft_tester.sh  score_smolinstruct_postprocess_and_score.py  test_prompts_comparison.py
scripts/layer2/: calibrate_yield.py  eval_layer2_model.py  eval_yield_multiclass.py  infer_layer2.py  layer2_train_config.yaml  layer2_train_config_stage2.yaml  layer2_train_config_stage2_frozen.yaml  layer2_train_config_stage2_v4.yaml  layer2_train_config_stage2_v5.yaml  layer2_train_config_stage2_v6.yaml  layer2_train_config_stage2_v7.yaml  layer2_train_config_stage2_v7b.yaml  train_layer2.py
scripts/layer2_llm/: QUICK_START.md  README.md  generate_training_data.py  quick_test.sh  run_full_pipeline.sh  train_layer2_llm.sh  validate_layer2.py
scripts/postprocess/: analyze_multiple_smiles.py  fix_and_rescore.py  optimize_predictions.py  score_and_visualize_layer2.py  score_only.py
scripts/preprocess/: preprocess_data.py
scripts/run/: debug_sft_tester.sh  eval_smol_task_list.sh  gvp_mlp_pretrain_qwen.sh  run_chembench_all_tasks.sh  run_eval_layer2_testset.sh
scripts/train/: gvp_mlp_pretrain.py  train.sh  train_ldmol.py
scripts/utils/: batch_replace_paths.py
utils/: metrics.py
