[project]
name = "scicore-mol"
version = "0.1.0"
description = "SciCore-Mol: Augmenting Large Language Models with Pluggable Molecular Cognition Modules"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers==4.57.1",
    "accelerate==1.13.0",
    "trl==0.29.0",
    "peft==0.18.1",
    "datasets==4.8.2",
    "diffusers==0.37.0",
    "tokenizers==0.22.2",
    "huggingface-hub==0.36.2",
    "safetensors==0.7.0",
    "sentencepiece==0.2.1",
    "einops==0.8.2",
    "timm==1.0.25",
    "pytorch-lightning==2.5.6",
    "numpy==1.26.4",
    "scipy==1.15.3",
    "pandas==2.3.3",
    "tqdm==4.67.3",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "tabulate==0.10.0",
    "rdkit==2025.9.6",
    "fcd==1.2.2",
    "nltk==3.9.3",
    "python-Levenshtein==0.27.3",
    "rouge-score==0.1.2",
    "absl-py==2.4.0",
    "pillow==12.1.1",
    "rich==14.3.3",
    "omegaconf==2.3.0",
    "requests==2.32.5",
    "pyyaml==6.0.3",
    "scikit-learn==1.7.2",
    "psutil==7.2.2",
    "packaging==26.0",
    "jinja2==3.1.6",
    "json-repair==0.58.6",
    "openai==2.29.0",
    "deepchem==2.8.0",
    "lmdb==2.0.0",
    "opencv-python-headless==4.11.0.86",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
flashattn = [
    "ninja==1.13.0",
    "setuptools==82.0.1",
    "wheel==0.46.3",
    "flash-attn==2.8.3",
]
graph = [
    "torch-geometric==2.7.0",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.5.0+cu121/torch_scatter-2.1.2+pt25cu121-cp310-cp310-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.10'",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.5.0+cu121/torch_cluster-1.6.3+pt25cu121-cp310-cp310-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.10'",
]
inference = [
    "setuptools==82.0.1",
    "vllm==0.7.3",
]
local = [
    "gvp",
    "pysmilesutils @ git+https://github.com/MolecularAI/pysmilesutils.git@b1e7ced15a42e18e629b984816020b1f0b0a2aa3",
]

[dependency-groups]
dev = []
train = [
    "deepspeed==0.18.8",
    "swanlab==0.6.4",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
gvp = { path = "vendor/gvp-pytorch-main" }

[tool.uv.extra-build-dependencies]
deepspeed = ["torch==2.5.1"]
flash-attn = [
    "torch==2.5.1",
    "packaging==26.0",
    "ninja==1.13.0",
    "setuptools==82.0.1",
]
